--- a/index.html
+++ b/index.html
@@ -5,22 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solar Crawler</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background: #000;
-        }
-        canvas {
-            display: block;
-        }
-    </style>
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
-    <script type="module" src="/index.ts"></script>
+    <script type="module" src="/src/index.ts"></script>
 </body>
-</html> 
+</html>
